tests/ui/macros/assert.with-generic-asset.stderr
error: macro requires a boolean expression as an argument
  --> $DIR/assert.rs:5:5
   |
LL |     assert!();
   |     ^^^^^^^^^ boolean expression required

error: expected expression, found keyword `struct`
  --> $DIR/assert.rs:6:13
   |
LL |     assert!(struct);
   |             ^^^^^^ expected expression

error: macro requires a boolean expression as an argument
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `debug_assert!`
  ::: $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: boolean expression required
   |
  ::: $DIR/assert.rs:7:5
   |
LL |     debug_assert!();
   |     --------------- in this macro invocation

error: expected expression, found keyword `struct`
  --> $DIR/assert.rs:8:19
   |
LL |     debug_assert!(struct);
   |                   ^^^^^^ expected expression

error: aborting due to 4 previous errors

